# n8n_for_claude_code

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: n8n.md
docs/: n8n-cloud-constraints.md  n8n-code-node-reference.md  n8n-deploy-guide.md  n8n-development-rules.md  n8n-node-tips.md
n8n_client/: __init__.py  batch.py  cli.py  client.py  config.py  credentials.py  dependencies.py  deploy.py  monitoring.py  sync.py  templates.py  test_runner.py  testing.py  validator.py  var_sync.py  versioning.py  visualize.py
workflows/: .example-webhook.json
workflows/templates/: schedule-fetch-notify.json  sub-workflow.json  trigger-code-action.json  webhook-respond.json  webhook-slack.json
